some new changes

--- a/src/components/CourseCard/style.css
+++ b/src/components/CourseCard/style.css
@@ -43,6 +43,7 @@
   align-items: center;
   justify-content: center;
   padding: 10%;
+  padding-bottom: 1rem;
 }
 /* @media (min-width: 43.81em) */
 
