--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: 2rem;
+  /* font-size: 2rem; */
+  font-size: 1rem;
   line-height: 50px;
   font-family: "Poppins", sans-serif;
   color: #0a2b1e;
